<resources>
    <string name="app_name">MyLoginApp</string>
    <string name="email_view">Enter e-mail address</string>
    <string name="password_view">Enter password</string>
    <string name="login_button">Login</string>
    <string name="to_register">New user? <u>Sign up</u></string>

    <string name="act2_email_view">Enter e-mail</string>
    <string name="act2_password_view">Enter password</string>
    <string name="act2_repassword_view">Re-enter password</string>
    <string name="act2_reg_button">Submit details</string>

    <string name="act3_logout_button">Logout</string>
</resources>
